examples/hashmap/include/fuzzy_log.h

typedef uint32_t ColorID;
struct colors
{
	//! number of entries in mycolors
	size_t numcolors;
	//! pointer to ColorID[numcolors]
	ColorID *mycolors;
};
typedef struct DAGHandle DAGHandle;
typedef struct write_id {
	uint64_t p1;
	uint64_t p2;
} write_id;
////////////////////////////////////
//         Server Bindings        //
////////////////////////////////////

//! Starts a fuzzy log server which listens at server_ip in the _current_ thread.
//!
//! @param server_ip
//!     a string of the form "<ip address>:<port>" at which the server should
//!     listen
//!
//! NOTE this function _never_ returns, as it immediately starts running the
//!   server
//!
void start_fuzzy_log_server(const char * server_ip);
//! Just like start_fuzzy_log_server except it starts the server in a _new_ thread.
void start_fuzzy_log_server_thread(const char * server_ip);
//! Starts a fuzzy log server which is part of a group of N servers which
//! listens at server_ip in the _current_ thread.
//!
//! @param server_ip
//!     a string of the form "<ip address>:<port>" at which the server should
//!     listen
//!
//! @param server_number
//!     which server in [0, total_servers_in_group) this server is in it's group.
//!
//! @param total_servers_in_group
//!     The number of servers in the group that this server is a part of.
//!     Servers within the same group share the same chain address space and are
//!     managed by the same lock-server
//!
//! NOTE this function _never_ returns, as it immediately starts running the
//!   server
//!
void start_fuzzy_log_server_for_group(const char * server_ip,
	 uint32_t server_number, uint32_t total_servers_in_group);
//! Just like start_fuzzy_log_server_for_group except it starts the server in a
//! _new_ thread.
//!
void start_fuzzy_log_server_thread_from_group(const char * server_ip,
		uint32_t server_number, uint32_t total_servers_in_group);
//! Start a number of fuzzy log server threads based on a config file.
//! NOTE this function _does_ return after all servers start.
void start_servers_from_config(const char *config_filename);
////////////////////////////////////
//    Old fuzzy log C bindings    //
////////////////////////////////////

struct FuzzyLog;
typedef struct ChainAndEntry {
	uint32_t chain;
	uint32_t entry;
} ChainAndEntry;
typedef uint8_t (*fuzzy_log_callback)(const uint8_t *, uint16_t);
struct FuzzyLog *fuzzy_log_new(const char * server_addr,
		const uint32_t *relevent_chains, uint16_t num_relevent_chains, fuzzy_log_callback callback);
ChainAndEntry fuzzy_log_append(struct FuzzyLog *log, uint32_t chain,
		const uint8_t *val, uint16_t len,
		const ChainAndEntry* deps, uint16_t num_deps);
void fuzzy_log_multiappend(struct FuzzyLog *log, uint32_t *chain, uint16_t num_chains,
		const uint8_t *val, uint16_t len,
		const ChainAndEntry* deps, uint16_t num_deps);
ChainAndEntry fuzzy_log_play_forward(struct FuzzyLog *log, uint32_t *chain);