examples/java-client2/src/c_link/FuzzyLogLibrary.java


	/**
	 * ! Just like start_fuzzy_log_server except it starts the server in a _new_ thread.<br>
	 * Original signature : <code>void start_fuzzy_log_server_thread(const char*)</code><br>
	 * <i>native declaration : fuzzy_log.h:165</i>
	 */
	void start_fuzzy_log_server_thread(String server_ip);

	/**
	 * !<br>
	 * Original signature : <code>void start_fuzzy_log_server_for_group(const char*, uint32_t, uint32_t)</code><br>
	 * <i>native declaration : fuzzy_log.h:170</i><br>
	 * @deprecated use the safer methods {@link #start_fuzzy_log_server_for_group(java.lang.String, int, int)} and {@link #start_fuzzy_log_server_for_group(com.sun.jna.Pointer, int, int)} instead
	 */
	@Deprecated
	void start_fuzzy_log_server_for_group(Pointer server_ip, int server_number, int total_servers_in_group);

	/**
	 * !<br>
	 * Original signature : <code>void start_fuzzy_log_server_for_group(const char*, uint32_t, uint32_t)</code><br>
	 * <i>native declaration : fuzzy_log.h:170</i>
	 */
	void start_fuzzy_log_server_for_group(String server_ip, int server_number, int total_servers_in_group);

	/**
	 * !<br>
	 * Original signature : <code>void start_fuzzy_log_server_thread_from_group(const char*, uint32_t, uint32_t)</code><br>
	 * <i>native declaration : fuzzy_log.h:175</i><br>
	 * @deprecated use the safer methods {@link #start_fuzzy_log_server_thread_from_group(java.lang.String, int, int)} and {@link #start_fuzzy_log_server_thread_from_group(com.sun.jna.Pointer, int, int)} instead
	 */
	@Deprecated
	void start_fuzzy_log_server_thread_from_group(Pointer server_ip, int server_number, int total_servers_in_group);

	/**
	 * !<br>
	 * Original signature : <code>void start_fuzzy_log_server_thread_from_group(const char*, uint32_t, uint32_t)</code><br>
	 * <i>native declaration : fuzzy_log.h:175</i>
	 */
	void start_fuzzy_log_server_thread_from_group(String server_ip, int server_number, int total_servers_in_group);

	/**
	 * ! NOTE this function _does_ return after all servers start.<br>
	 * Original signature : <code>void start_servers_from_config(const char*)</code><br>
	 * <i>native declaration : fuzzy_log.h:182</i><br>
	 * @deprecated use the safer methods {@link #start_servers_from_config(java.lang.String)} and {@link #start_servers_from_config(com.sun.jna.Pointer)} instead
	 */
	@Deprecated
	void start_servers_from_config(Pointer config_filename);

	/**
	 * ! NOTE this function _does_ return after all servers start.<br>
	 * Original signature : <code>void start_servers_from_config(const char*)</code><br>
	 * <i>native declaration : fuzzy_log.h:182</i>
	 */
	void start_servers_from_config(String config_filename);

	/**
	 * ! @deprecated<br>
	 * Original signature : <code>FuzzyLog* fuzzy_log_new(const char*, const uint32_t*, uint16_t, fuzzy_log_callback)</code><br>
	 * <i>native declaration : fuzzy_log.h:194</i><br>
	 * @deprecated use the safer methods {@link #fuzzy_log_new(java.lang.String, int[], short, c_link.FuzzyLogLibrary.fuzzy_log_callback)} and {@link #fuzzy_log_new(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference, short, c_link.FuzzyLogLibrary.fuzzy_log_callback)} instead
	 */
	@Deprecated
	FuzzyLogLibrary.FuzzyLog fuzzy_log_new(Pointer server_addr, IntByReference relevent_chains,
			short num_relevent_chains, FuzzyLogLibrary.fuzzy_log_callback callback);

	/**
	 * ! @deprecated<br>
	 * Original signature : <code>FuzzyLog* fuzzy_log_new(const char*, const uint32_t*, uint16_t, fuzzy_log_callback)</code><br>
	 * <i>native declaration : fuzzy_log.h:194</i>
	 */
	FuzzyLogLibrary.FuzzyLog fuzzy_log_new(String server_addr, int relevent_chains[], short num_relevent_chains,
			FuzzyLogLibrary.fuzzy_log_callback callback);

	/**
	 * ! @deprecated<br>
	 * Original signature : <code>ChainAndEntry fuzzy_log_append(FuzzyLog*, uint32_t, const uint8_t*, uint16_t, const ChainAndEntry*, uint16_t)</code><br>
	 * <i>native declaration : fuzzy_log.h:199</i><br>
	 * @deprecated use the safer methods {@link #fuzzy_log_append(c_link.FuzzyLogLibrary.FuzzyLog, int, byte[], short, c_link.ChainAndEntry, short)} and {@link #fuzzy_log_append(c_link.FuzzyLogLibrary.FuzzyLog, int, com.sun.jna.Pointer, short, c_link.ChainAndEntry, short)} instead
	 */
	@Deprecated
	ChainAndEntry.ByValue fuzzy_log_append(FuzzyLogLibrary.FuzzyLog log, int chain, Pointer val, short len,
			ChainAndEntry deps, short num_deps);

	/**
	 * ! @deprecated<br>
	 * Original signature : <code>ChainAndEntry fuzzy_log_append(FuzzyLog*, uint32_t, const uint8_t*, uint16_t, const ChainAndEntry*, uint16_t)</code><br>
	 * <i>native declaration : fuzzy_log.h:199</i>
	 */
	ChainAndEntry.ByValue fuzzy_log_append(FuzzyLogLibrary.FuzzyLog log, int chain, byte val[], short len,
			ChainAndEntry deps, short num_deps);

	/**
	 * ! @deprecated<br>
	 * Original signature : <code>void fuzzy_log_multiappend(FuzzyLog*, uint32_t*, uint16_t, const uint8_t*, uint16_t, const ChainAndEntry*, uint16_t)</code><br>
	 * <i>native declaration : fuzzy_log.h:204</i><br>
	 * @deprecated use the safer methods {@link #fuzzy_log_multiappend(c_link.FuzzyLogLibrary.FuzzyLog, java.nio.IntBuffer, short, byte[], short, c_link.ChainAndEntry, short)} and {@link #fuzzy_log_multiappend(c_link.FuzzyLogLibrary.FuzzyLog, com.sun.jna.ptr.IntByReference, short, com.sun.jna.Pointer, short, c_link.ChainAndEntry, short)} instead
	 */
	@Deprecated
	void fuzzy_log_multiappend(FuzzyLogLibrary.FuzzyLog log, IntByReference chain, short num_chains, Pointer val,
			short len, ChainAndEntry deps, short num_deps);

	/**
	 * ! @deprecated<br>
	 * Original signature : <code>void fuzzy_log_multiappend(FuzzyLog*, uint32_t*, uint16_t, const uint8_t*, uint16_t, const ChainAndEntry*, uint16_t)</code><br>
	 * <i>native declaration : fuzzy_log.h:204</i>
	 */
	void fuzzy_log_multiappend(FuzzyLogLibrary.FuzzyLog log, IntBuffer chain, short num_chains, byte val[], short len,
			ChainAndEntry deps, short num_deps);

	/**
	 * ! @deprecated<br>
	 * Original signature : <code>ChainAndEntry fuzzy_log_play_forward(FuzzyLog*, uint32_t*)</code><br>
	 * <i>native declaration : fuzzy_log.h:209</i><br>
	 * @deprecated use the safer methods {@link #fuzzy_log_play_forward(c_link.FuzzyLogLibrary.FuzzyLog, java.nio.IntBuffer)} and {@link #fuzzy_log_play_forward(c_link.FuzzyLogLibrary.FuzzyLog, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated
	ChainAndEntry.ByValue fuzzy_log_play_forward(FuzzyLogLibrary.FuzzyLog log, IntByReference chain);

	/**
	 * ! @deprecated<br>
	 * Original signature : <code>ChainAndEntry fuzzy_log_play_forward(FuzzyLog*, uint32_t*)</code><br>
	 * <i>native declaration : fuzzy_log.h:209</i>
	 */
	ChainAndEntry.ByValue fuzzy_log_play_forward(FuzzyLogLibrary.FuzzyLog log, IntBuffer chain);

	///////////////////////////////////

	c_link.write_id.ByValue wh_async_append(Pointer handle, ByteBuffer data, size_t data_size, int inhabits);

	c_link.write_id.ByValue wh_async_multiappend(Pointer handle, ByteBuffer data, size_t data_size, colors.ByReference inhabits);

	c_link.write_id.ByValue wh_async_no_remote_multiappend(Pointer handle, ByteBuffer data, size_t data_size, colors.ByReference inhabits);

	void wh_flush_completed_appends(Pointer handle);

	c_link.write_id.ByValue wh_wait_for_any_append(Pointer handle);

	///////////////

	void rh_snapshot(Pointer handle);

	void rh_snapshot_colors(Pointer handle, colors.ByReference colors);

	c_link.get_next_val.ByValue rh_get_next2(Pointer handle, size_tByReference data_size, size_tByReference locs_read);

	///////////////////////////////////

	public static class FuzzyLog extends PointerType {
		public FuzzyLog(Pointer address) {
			super(address);
		}

		public FuzzyLog() {
			super();
		}
	};

	public static class DAGHandle extends PointerType {
		public DAGHandle(Pointer address) {
			super(address);
		}

		public DAGHandle() {
			super();
		}
	};
}
